implements solution file parsing